# wagon-service

./: README.md  docker-compose.yml
etran-adapter/: alembic.ini  pyproject.toml
etran-adapter/alembic/: env.py
etran-adapter/alembic/versions/: 0001_initial.py  0002_etran_document_tables.py
etran-adapter/docker/: Dockerfile  docker-compose.yml
etran-adapter/src/etran_adapter/: config.py  database.py  main.py
etran-adapter/src/etran_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etran-adapter/tests/fixtures/: gu12_request.xml  gu12_response.xml  redirection_request.xml  redirection_response.xml  waybill_request.xml  waybill_response.xml
etran-adapter/tests/integration/: test_document_processing.py  test_queue_flow.py  test_soap_client.py
etran-adapter/tests/unit/: test_base64_helper.py  test_exceptions.py  test_gu12_mapper.py  test_redirection_mapper.py  test_retry_policy.py  test_soap_envelope.py  test_status_repository.py  test_waybill_mapper.py  test_xml_builder.py  test_xml_parser.py
wagon-service/: Dockerfile  alembic.ini  pyproject.toml
wagon-service/alembic/: env.py
wagon-service/alembic/versions/: 0001_initial_schema.py  0002_sync_log_onupdate.py  0003_align_schema_to_architecture.py  0004_add_trgm_indexes.py  0005_add_filter_distinct_indexes.py  0006_extend_wagon_uc13.py  0007_create_audit_log.py  0008_create_dict_tables.py  0009_add_assignment_1c_sync_log.py  0010_add_dashboard_indexes.py  0011_create_filter_preset.py  0012_nsi_etran_tables.py  0013_wagon_todo_col_123.py  (+1 more)
wagon-service/app/: config.py  database.py  dependencies.py  main.py
wagon-service/docs/: db_schema.sql
wagon-service/tests/: conftest.py
(+219 files in other folders)
