[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etran-adapter"
version = "0.1.0"
description = "Интеграционный адаптер для АС ЭТРАН НП"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "lxml>=5.1,<6",
    "tenacity>=8.2,<10",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1,<25",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "redis>=5.0,<6",
    "rq>=1.16,<2",
    "httpx>=0.27,<1",
    "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "httpx>=0.27,<1",
    "ruff>=0.3,<1",
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
