[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagon-service"
version = "1.0.0"
description = "REST API для управления парком вагонов"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "PyJWT",
    "httpx",
    "apscheduler",
    "structlog",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["app*", "alembic*"]
